# WeatherPi_v2

./: .gitignore  CLAUDE.md  Pipfile  README.md  main.py  memetime.py  pyproject.toml  requirements.txt  weather_data.py
weatherpi/: draw_functions.py  exceptions.py  log.py  setup.py  weather_data.py
