[tool.poetry]
name = "weatherpi-v3"
version = "3.0.0"
description = "A program that displays weather, text or images on an Inky pHat display for Raspberry Pi"
authors = ["Matt Sharp <matthew.sharp3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
certifi = "^2021.10.8"
charset-normalizer = "2.0.12"
click = "8.1.7"
idna = "3.3"
inky = {version = "1.5.0", platform = "raspbian"}
pillow = "^10.0"
python = "^3.11.2"
python-dotenv = "1.0.1"
requests = "^2.27.1"
urllib3 = "^1.26.8"
mypy-extensions = "1.0.0"
numpy = "2.0.0"
packaging = "24.1"
pathspec = "0.12.1"
platformdirs = "4.2.2"
"RPi.GPIO" = {version = "0.7.1", platform = "raspbian"}
setuptools = "70.1.0"
smbus2 = {version = "0.4.3", platform = "raspbian"}
spidev = {version = "3.6", platform = "raspbian"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
