[project]
name = "weatherpi-v3"
version = "3.0.0"
description = "A program that displays weather, text or images on an Inky pHat display for Raspberry Pi"
authors = [{name = "Matt Sharp", email = "matthew.sharp3@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "pillow>=10.0",
    "python-dotenv==1.0.1",
    "requests>=2.27.1",
]

[dependency-groups]
dev = ["black>=24.4.2"]
rpi = [
    "inky==1.5.0",
    "RPi.GPIO==0.7.1",
    "smbus2==0.4.3",
    "spidev==3.6",
]

[tool.uv]
package = false
